[gd_scene load_steps=3 format=3 uid="uid://d4eosmublq6ma"]

[ext_resource type="Texture2D" uid="uid://du3jmm4yyjxm5" path="res://Assets/health_pot_icon.png" id="1_kxkn6"]
[ext_resource type="Script" path="res://src/Scripts/Shops/shop_item.gd" id="1_o2fqv"]

[node name="ShopItem" type="Control" node_paths=PackedStringArray("quantity_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -351.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_o2fqv")
quantity_label = NodePath("QuantityLabel")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(128, 46)
layout_mode = 2
offset_left = 1.5
offset_top = 1.0
offset_right = 129.5
offset_bottom = 47.0
size_flags_horizontal = 6
size_flags_vertical = 3
color = Color(0.234292, 0.30941, 0.374489, 1)

[node name="IconBG" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 4.5
offset_top = 3.0
offset_right = 44.5
offset_bottom = 43.0
color = Color(0.42071, 0.675361, 0.7752, 1)

[node name="ItemIcon" type="TextureRect" parent="IconBG"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kxkn6")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 47.5
offset_top = 3.0
offset_right = 108.5
offset_bottom = 43.0

[node name="ItemName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Basic HP Potion"

[node name="PriceTag" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Price: 80 Gold"

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 28.0
offset_right = 23.0
offset_bottom = 51.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
